2015-11-12  c.hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

2015-11-12  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2015-11-11  Carl Hetherington  <cth@carlh.net>

	* Updated pt_PT translation from Tiago Casal Ribeiro.

	* Updated sv_SE translation from Adam Klotblixt.

2015-11-10  Carl Hetherington  <cth@carlh.net>

	* Further adjustments to playhead behaviour during trim (#737).

	* Version 2.5.1 released.

2015-11-10  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2015-11-09  Carl Hetherington  <cth@carlh.net>

	* Correct a number of float/double mismatches; should fix #742.

	* Desensitise trim-playhead buttons as appropriate (#737).

	* Keep same frame visible after trimming content start (#737).

	* Trim frames after the current one with "trim after current", leaving
	the current frame in (#737).

2015-11-08  Carl Hetherington  <cth@carlh.net>

	* Fix bad layout in the audio tab (#738).

	* Allow configuration of SubRip subtitle colour and outlines.

2015-11-06  Carl Hetherington  <cth@carlh.net>

	* Sort cinemas in KDM dialog and standalone creator (#726).

2015-11-06  c.hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

2015-11-06  Carl Hetherington  <cth@carlh.net>

	* Make single-frame image sources adjust their notional
	frame rate to that of the DCP (#714).

2015-11-05  Carl Hetherington  <cth@carlh.net>

	* Correct time display when previewing multi-reel DCP content.

2015-11-05  c.hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2015-11-05  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.0 released.

2015-11-05  Carl Hetherington  <cth@carlh.net>

	* Version 2.4.18 released.

2015-11-04  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Version 2.4.17 released.

2015-11-04  Carl Hetherington  <cth@carlh.net>
