@@ -474,7 +474,7 @@ ensure_ui_thread ()
 string
 audio_channel_name (int c)
 {
-	DCPOMATIC_ASSERT (MAX_DCP_AUDIO_CHANNELS == 12);
+	DCPOMATIC_ASSERT (MAX_DCP_AUDIO_CHANNELS == 16);
 
 	/// TRANSLATORS: these are the names of audio channels; Lfe (sub) is the low-frequency
 	/// enhancement channel (sub-woofer).  HI is the hearing-impaired audio track and
@@ -492,6 +492,10 @@ audio_channel_name (int c)
 		_("Right centre"),
 		_("Left rear surround"),
 		_("Right rear surround"),
+		_("D-BOX primary"),
+		_("D-BOX secondary"),
+		_("Unused"),
+		_("Unused")
 	};
 
 	return channels[c];
